<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rlr_april_tags</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="e.shlomov@innopolis.university">mook</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <!-- added -->

  <depend>image_proc</depend>
  <exec_depend>v4l2_camera</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>apriltag_msgs</depend>
  <exec_depend>rlr_camera</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
